--- a/.github/workflows/master_ajoubert-tomcat.yml
+++ b/.github/workflows/master_ajoubert-tomcat.yml
@@ -29,13 +29,13 @@ jobs:
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.war'
-
+          
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: $
 
     steps:
       - name: Download artifact from build job
@@ -43,11 +43,36 @@ jobs:
         with:
           name: java-app
 
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+      - name: Azure Login
+        uses: azure/login@v1
         with:
-          app-name: 'ajoubert-tomcat'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0265828C94604CB9B8D4DC459E7CBD9B }}
-          package: '*.war'
+          creds: $
+
+      - name: Deploy to Web App with Azure CLI
+        uses: azure/CLI@v1
+        with:
+          azcliversion: 2.43.0
+          inlineScript: |
+            az webapp deploy --resource-group "myrg" --name "myapp" --src-path ROOT.war --type war --async true
+
+#   deploy:
+#     runs-on: ubuntu-latest
+#     needs: build
+#     environment:
+#       name: 'Production'
+#       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+#     steps:
+#       - name: Download artifact from build job
+#         uses: actions/download-artifact@v2
+#         with:
+#           name: java-app
+
+#       - name: Deploy to Azure Web App
+#         id: deploy-to-webapp
+#         uses: azure/webapps-deploy@v2
+#         with:
+#           app-name: 'ajoubert-tomcat'
+#           slot-name: 'Production'
+#           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0265828C94604CB9B8D4DC459E7CBD9B }}
+#           package: '*.war'
